crates/agtrace-cli/tests/snapshots/help_snapshots__doctor_check_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Test if a specific log file can be successfully parsed.

Returns success/failure status and event count.
Useful for validating log files before indexing.

Usage: agtrace doctor check [OPTIONS] <FILE_PATH>

Arguments:
  <FILE_PATH>
          Path to the log file

Options:
      --provider <PROVIDER>
          Explicitly specify provider (auto-detects if omitted)
          
          [possible values: claude_code, codex]

  -h, --help
          Print help (see a summary with '-h')

Output Options:
      --quiet
          Minimal output (IDs only, for scripting)

      --compact
          Compact output (one line per item)

      --verbose
          Verbose output (all metadata)

Global Options:
      --data-dir <DATA_DIR>
          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)

      --format <FORMAT>
          Output format for command results
          
          [default: plain]
          [possible values: plain, json]

      --log-level <LOG_LEVEL>
          Logging verbosity level
          
          [default: info]
          [possible values: error, warn, info, debug, trace]

      --project <PROJECT_ROOT>
          Target project directory (defaults to current directory)

      --all-projects
          Operate on all indexed projects instead of current project only

      --all-worktrees
          Include sessions from all git worktrees of the current repository

EXAMPLES:
  # Check if a log file can be parsed (auto-detect provider)
  agtrace doctor check ~/.claude/projects/my-project/session.jsonl

  # Explicitly specify provider
  agtrace doctor check --provider claude_code ~/.claude/projects/my-project/session.jsonl

  # Check multiple files
  agtrace doctor check ~/.codex/sessions/*.jsonl
