crates/agtrace-cli/tests/snapshots/help_snapshots__index_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Manage the session index (update, rebuild, vacuum)

Usage: agtrace index [OPTIONS] <COMMAND>

Commands:
  update   Scan for new sessions and add them to the index
  rebuild  Clear and rebuild the entire index from scratch
  vacuum   Optimize database performance and reclaim disk space
  help     Print this message or the help of the given subcommand(s)

Options:
  -h, --help  Print help

Global Options:
      --data-dir <DATA_DIR>          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)
      --format <FORMAT>              Output format for command results [default: plain] [possible values: plain, json]
      --log-level <LOG_LEVEL>        Logging verbosity level [default: info] [possible values: error, warn, info, debug, trace]
      --project-root <PROJECT_ROOT>  Override project root directory (defaults to current directory)
      --all-projects                 Operate on all indexed projects instead of current project only
