crates/agtrace-cli/tests/snapshots/help_snapshots__init_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Initialize agtrace — run this once to get started.

This command will:
  • Auto-detect installed providers (Claude Code, Codex)
  • Create the local database (system data directory, e.g., ~/Library/Application Support/agtrace on macOS)
  • Scan and index existing session logs

After running 'init', use 'agtrace watch' to monitor sessions in real-time.

Use --refresh to force a re-scan of all logs.

Usage: agtrace init [OPTIONS]

Options:
      --refresh
          Force re-scan even if recently indexed

  -h, --help
          Print help (see a summary with '-h')

Global Options:
      --data-dir <DATA_DIR>
          Directory for agtrace database and configuration (defaults to system data directory, or AGTRACE_PATH env var)

      --format <FORMAT>
          Output format for command results
          
          [default: plain]
          [possible values: plain, json]

      --log-level <LOG_LEVEL>
          Logging verbosity level
          
          [default: info]
          [possible values: error, warn, info, debug, trace]

      --project <PROJECT_ROOT>
          Target project directory (defaults to current directory)

      --all-projects
          Operate on all indexed projects instead of current project only

      --all-worktrees
          Include sessions from all git worktrees of the current repository
