crates/agtrace-cli/tests/snapshots/help_snapshots__lab_analyze_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Usage: agtrace lab analyze [OPTIONS] <SESSION_ID>

Arguments:
  <SESSION_ID>  

Options:
      --data-dir <DATA_DIR>          [default: ~/.agtrace]
      --detect <DETECT>              [default: all]
      --format <FORMAT>              [default: plain] [possible values: plain, json]
      --log-level <LOG_LEVEL>        [default: info] [possible values: error, warn, info, debug, trace]
      --project-root <PROJECT_ROOT>  
      --all-projects                 
  -h, --help                         Print help
