crates/agtrace-cli/tests/snapshots/help_snapshots__lab_help.snap
---
source: crates/agtrace-cli/tests/help_snapshots.rs
expression: help
---
Experimental features

Usage: agtrace lab [OPTIONS] <COMMAND>

Commands:
  export  Export session data to various formats
  stats   Analyze ToolCall statistics across sessions
  help    Print this message or the help of the given subcommand(s)

Options:
      --data-dir <DATA_DIR>          [default: ~/.agtrace]
      --format <FORMAT>              [default: plain] [possible values: plain, json]
      --log-level <LOG_LEVEL>        [default: info] [possible values: error, warn, info, debug, trace]
      --project-root <PROJECT_ROOT>  
      --all-projects                 
  -h, --help                         Print help
